feat: lookup keys on pods in in stateful set